New in version 1.2.0
====================

   Important changes:

   - Updated diffExp() to handle changes in lmFit() and topTable() from limma.


New in version 1.0.6
====================

   Minor changes:

   - Updated loadMAdata() man page.


New in version 1.0.5
====================

   Minor changes:

   - Updated diffExp() to only use vennDiagram() of the limma package for Venn 
     diagram plotting in order to correct a bug when plotting more than three 
     circles. Also updated the corresponding man page.

   - Updated the SBML section in the loadGSC() man page.


New in version 1.0.4
====================

   Minor changes:

   - Fixed bug in loadMAdata so that also compressed CEL-files (*.CEL.gz) can be 
     loaded correctly.


New in version 1.0.3
====================

   Minor changes:

   - Updated references in vignette.


New in version 1.0.2
====================

   Minor changes:

   - Updated CITATION information.


New in version 1.0.1
====================

   Important changes:

   - Fixed bug in loadGSC() so that gmt-files are now loaded correctly.

   Minor changes:

   - Temporarily added suppressWarnings() in polarPlot() around the calls to 
     radial.plot() since warnings appeared for example("radial.plot") in
     plotrix v3.4-6.

   - Updated CITATION information.

   - Fixed typos in DESCRIPTION and piano-package.Rd.

   - Updated the man file for loadGSC().

   - Added URL in DESCRIPTION.


New in version 1.0.0
====================

   Important changes:

   - Removed the arguments 'venn', 'heatmap' and 'polarPlot' from diffExp and 
     replaced them with a new argument: 'plot'.

   - The consensusScores function now does not return its result invisibly.

   - The argument order in consensusScores has changed: 'plot' has been moved 
     from last place to after 'method'.

   Minor changes:

   - Added citation DOI to vignette.

   - Fixed bug in geneSetSummary when no directions are available.
