@@ -1,8 +1,8 @@
 Package: piano
 Type: Package
 Title: Platform for integrative analysis of omics data
-Version: 1.1.12
-Date: 2013-07-05
+Version: 1.1.13
+Date: 2013-07-15
 Author@R: c(person("Leif", "Varemo", email = "piano.rpkg@gmail.com",
         role = "aut"), person("Intawat", "Nookaew", email =
         "piano.rpkg@gmail.com", role = "aut"))
@@ -11,7 +11,7 @@ Maintainer: Leif Varemo <piano.rpkg@gmail.com>
 Depends: R (>= 2.14.0)
 Imports: Biobase, gplots, igraph, relations, marray
 Suggests: yeast2.db, rsbml, plotrix, limma, affy, plier, affyPLM,
-        gtools, biomaRt
+        gtools, biomaRt, snowfall
 Description: Piano performs gene set analysis using various statistical methods, from different gene level statistics and a wide range of gene-set collections. Furthermore, the Piano package contains functions for combining the results of multiple runs of gene set analyses.
 License: GPL (>=2)
 biocViews: Microarray, Preprocessing, QualityControl,
